--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Parcel Sandbox</title>
-    <link href="src/styles.css" />
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
 
   <body>
