--- a/index.html
+++ b/index.html
@@ -100,5 +100,6 @@
       </div>
     </h4>
     <script src="src/index.js"></script>
+     <a href="https://github.com/Myroslava123/pogoda">Open-source code,</a> by Myroslava taran ;
   </body>
 </html>
