--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="row">
           <div class="col-sm-4">
             <div id="ramka1">
-              <img src="img/sun.png" height="180ox" /><br />
+              <img src="img/sun.png" id="obrazekdzis" /><br />
             </div>
           </div>
 
