--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <link rel="stylesheet" href="src/styles.css" />
   </head>
 
-  <body>
+    <body>
     <h1>
-      Weather appl
+      Weather app
     </h1>
     <h2>
       <form id="szukajka">
@@ -32,13 +32,13 @@
         />
       </form>
     </h2>
-
+    
     <h3>
       <div class="container">
         <div class="row">
           <div class="col-sm-4">
             <div id="ramka1">
-              <img src="img/sun.png" id="obrazekdzis" /><br />
+              <img src="" id="pjutro0"/><br />
             </div>
           </div>
 
@@ -48,10 +48,10 @@
               <hr />
               <div id="datadozmiany"></div>
               <hr />
-              <div><span id="temperaturka">30</span>°C</div>
+              <div><span id="tempjutro0">30</span>°C
               <hr />
               <div>🌬 <span id="wiater"></span> km/h</div>
-              <div id="humidity" %></div>
+              <div id="chmurka"></div>
             </div>
           </div>
         </div>
@@ -63,45 +63,44 @@
         <div class="row">
           <div class="col">
             <div id="ramka3">
-              <img src="img/storm.png" width="100" /><br />
-              Tue<br />
-              15°C
+              <img src="" id="pjutro1" width="100" /><br />
+              <span id="dzienjutro1"></span><br />
+              <span id="tempjutro1"></span>°C
             </div>
           </div>
           <div class="col">
             <div id="ramka3">
-              <img src="img/snow.png" width="100" /><br />
-              Wed<br />
-              3°C
+              <img src="" id="pjutro2" width="100" /><br />
+              <span id="dzienjutro2"></span><br />
+              <span id="tempjutro2"></span>°C
             </div>
           </div>
           <div class="col">
             <div id="ramka3">
-              <img src="img/rain.png" width="100" /> <br />
-              Thu<br />
-              11°C
+              <img src="" id="pjutro3" width="100" /><br />
+              <span id="dzienjutro3"></span><br />
+              <span id="tempjutro3"></span>°C
             </div>
           </div>
           <div class="col">
             <div id="ramka3">
-              <img src="img/clouds.png" width="100" /><br />
-              Fri<br />
-              18°C<br />
+              <img src="" id="pjutro4" width="100" /><br />
+              <span id="dzienjutro4"></span><br />
+              <span id="tempjutro4"></span>°C
             </div>
           </div>
           <div class="col">
             <div id="ramka3">
-              <img src="img/cloudy.png" width="100" /> <br />
-              Sat<br />
-              23°C
+              <img src="" id="pjutro5" width="100" /><br />
+              <span id="dzienjutro5"></span><br />
+              <span id="tempjutro5"></span>°C
             </div>
           </div>
         </div>
       </div>
     </h4>
-    <script src="src/index.js"></script>
-    <h5>
-      <a href="https://github.com/Myroslava123/pogoda">Open-source code,</a> by Myroslava taran ;
-    </h5>
+    <script src="indexappMira.js"></script>
+  <h5><a href="https://github.com/Myroslava123/pogoda">Open-source code, </a> by Myroslava taran</h5>
   </body>
 </html>
+  
