--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
       </div>
     </h4>
-    <script src="index.js"></script>
+    <script src="src/index.js"></script>
   <h5><a href="https://github.com/Myroslava123/pogoda">Open-source code, </a> by Myroslava taran</h5>
   </body>
 </html>
